# hal_renesas_public

smartbond/: CMakeLists.txt
smartbond/da1469x_hal/: da1469x_clock.c  da1469x_config.h  da1469x_otp.h
